# epistasis-formulas

./: .gitignore  .pylintrc  .travis.yml  AUTHORS.md  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
epystatic/: circuits.py  epistasis.py  fourier.py  slicing.py  utils.py
tests/: test_circuits.py  test_epistasis.py  test_fourier.py  test_slicing.py  test_utils.py
