[metadata]
author = Nikolaos Korasidis
author_email = nkorasid@student.ethz.ch
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Scientific/Engineering :: Mathematics
description = Compute higher-order epistatic interactions.
keywords = epistasis
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
maintainer = Nikolaos Korasidis
maintainer_email = nkorasid@student.ethz.ch
name = epystatic
url = https://github.com/cbg-ethz/epistasis-formulas

[options]
include_package_data = true
install_requires =
    numpy
python_requires = >= 3.5
setup_requires =
    setuptools>=38.6.0
tests_require =
    black
    check-manifest>=0.38
    nose2
    pyroma>=2.4
    pylint
zip_safe = true
